# photosort

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  main.go  main_old.go1  test.txt
src/: lib.rs  main.rs
src/photosort_core/: backup.rs  cli.rs  database.rs  error.rs  exif.rs  import.rs  library.rs  media.rs  mod.rs  photo.rs  push.rs  scan.rs  search.rs  sidecar.rs  workers.rs
tests/: cli.rs
tests/common/: mod.rs
tests/fixtures/: IMG_8040.HEIC  IMG_E8109.photo-edit  _DSC6936-2.photo-edit  _DSC6936-2.xmp
util/: cli.go  import.go  library.go
