[package]
name = "photosort"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
clap = { version = "4.5.40", features = ["derive"] }
exiftool = "0.2.5"
indicatif = { version = "0.18.0", features = ["rayon"] }
log = "0.4.27"
rayon = "1.10.0"
rusqlite = { version = "0.36.0", features = ["bundled"] }
rusqlite_migration = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
simplelog = "0.12.2"
thiserror = "2.0.12"
time = { version = "0.3.47", features = ["serde-well-known", "macros", "local-offset"] }
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
